--- a/blogger/app/views/articles/index.html.erb
+++ b/blogger/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <h1>All Articles</h1>
-
+<%= link_to "Blogger Tags", tags_path, class: 'article_title' %>
 <ul id="articles">
   <% @articles.each do |article| %>
     <li>
-      <%= link_to article.title, article_path(article) %>
+      <%= link_to article.title, article_path(article), class: 'article_title' %>
     </li>
   <% end %>
 </ul>
